src/index.css
@import "tailwindcss";

@theme {
  --color-brand-100: #e0f2fe;
  --color-brand-500: #00a2ed;
  --color-brand-600: #0284c7;
  --color-brand-900: #0c4a6e;
}

:root {
  color-scheme: light dark;
}

@layer base {
  body {
    @apply antialiased text-zinc-900 bg-zinc-50 transition-colors duration-300;
  }
}

/* Custom Scrollbar */
::-webkit-scrollbar {
  width: 6px;
}

::-webkit-scrollbar-track {
  @apply bg-transparent;
}

::-webkit-scrollbar-thumb {
  @apply bg-zinc-300 dark:bg-zinc-700 rounded-full hover:bg-zinc-400 dark:hover:bg-zinc-600;
}

@media (prefers-color-scheme: dark) {
  @layer base {
    body {
      @apply text-zinc-100 bg-zinc-950;
    }
  }
}

